Remove deprecated BooleanStateAction; remove deprecated .newInstance().